--- a/course.yml
+++ b/course.yml
@@ -1,7 +1,7 @@
 title: Introduction to Machine Learning with R
-description: In this course you will get hands-on practice with machine learning fundamentals in R.
+description: In this course you will get hands-on practice with machine learning in R. Some prior experience with R would be helpful before tackling this course. DataCamp offers a free Introduction to R course that would be beneficial to take prior to starting this course.
 university: DataCamp
-difficulty_level: 1
+difficulty_level: 3
 time_needed: 1 hour
 datasets:
   ml5.RData: Ml5
