--- a/course.yml
+++ b/course.yml
@@ -1,8 +1,14 @@
 title: Introduction to Machine Learning with R
-description: While machine learning has been around awhile, it still remains a mysterious black box to many. How does it really work? By the end of the course, you should better understand the basics of machine learning and will get hands on experience developing linear regression and random forests models. Some prior experience with R would be helpful before tackling this course. DataCamp offers a free Introduction to R course that would be beneficial to complete prior to starting this course.
+description: While machine learning has been around awhile, it still remains a mysterious
+  black box to many. How does it really work? By the end of the course, you should
+  better understand the basics of machine learning and will get hands on experience
+  developing linear regression and random forests models. Some prior experience with
+  R would be helpful before tackling this course. DataCamp offers a free Introduction
+  to R course that would be beneficial to complete prior to starting this course.
 university: DataCamp
 difficulty_level: 3
 time_needed: 1 hour
 datasets:
+  rmse.png: Rmse
   ml5.RData: Ml5
   wage.csv: Wage
